# airbnb-clone

./: memo.py  pyproject.toml  test.txt
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_message/: apps.py  models.py
direct_message/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_rename_start_at_experiences_start_alter_perk_details_and_more.py  0003_perk_category.py  0004_remove_perk_category_experiences_category.py  0005_alter_experiences_category_alter_experiences_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pet_allowed.py  0002_initial.py  0003_rename_price_house_price_per_night.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_romm_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_amenity_category.py  (+3 more)
users/: admin.py  models.py  serializers.py
wishlists/: models.py
(+7 files in other folders)
